<?xml version="1.0" encoding="utf-8"?>


<com.github.florent37.expansionpanel.ExpansionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/expansion_layout_relative"
    app:expansion_expanded="false"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etxt_relative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint=""
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/spinner_relative"
                app:layout_constraintHorizontal_weight="10"
                android:layout_marginEnd="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etxt_relative_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType = "text">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spinner_relative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:ms_arrowColor="#0000FF"
                app:ms_arrowSize="16dp"
                app:ms_floatingLabelColor="#A9A9A9"
                app:ms_floatingLabelText="Connection Word"
                app:ms_hint="Please Choose"
                app:ms_hintColor="#000000"
                app:ms_multiline="true"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/etxt_relative"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_weight="10">

            </fr.ganfra.materialspinner.MaterialSpinner>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_post_relative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/post"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/btn_put_relative"
                app:layout_constraintHorizontal_weight="1"
                android:layout_marginEnd="8dp">

            </Button>

            <Button
                android:id="@+id/btn_put_relative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/put"
                app:layout_constraintRight_toLeftOf="@+id/btn_insert_relative"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/btn_post_relative"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_weight="1">

            </Button>

            <Button
                android:id="@+id/btn_insert_relative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/insert"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/btn_put_relative"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_weight="1">

            </Button>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</com.github.florent37.expansionpanel.ExpansionLayout>